<resources>
    <string name="app_name">Welcome to Flag Quiz</string>
    <string name="difficulty">Choose your difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="expert">Expert</string>

    <string name="guess_flag">Guess That Flag</string>
    <string name="question_counter">1/10</string>

    <string name="passed_message">Congratulations! 🎉 You passed with a score of %1$d out of %2$d!</string>
    <string name="failed_message">Oops! 😞 You scored %1$d out of %2$d. Better luck next time!</string>
    <string name="share">Share</string>
    <string name="play_again">Play Again</string>

    <string name="warning">Warning!</string>
    <string name="warning_message">This app is designed for those who wants to never touch grass ever again, use it at your own risk. Also, please use light mode for the best experience cause the dev did not get paid enough for this.</string>
    <string name="press_to_continue">Press anywhere to continue</string>

</resources>