<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_name"
        style="@style/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.150" />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/app_logo"
        android:contentDescription="App Logo"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/difficulty"
        style="@style/difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficulty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnEasy"
        app:layout_constraintTop_toBottomOf="@id/logoImage" />

    <Button
        android:id="@+id/btnEasy"
        style="@style/btnopt1"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="52dp"
        android:text="@string/easy"
        app:layout_constraintEnd_toStartOf="@id/btnMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/difficulty" />

    <Button
        android:id="@+id/btnMedium"
        style="@style/btnopt2"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="52dp"
        android:text="@string/medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnEasy"
        app:layout_constraintTop_toBottomOf="@id/difficulty" />

    <Button
        android:id="@+id/btnHard"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:text="@string/hard"
        style="@style/btnopt3"
        app:layout_constraintEnd_toStartOf="@id/btnExpert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnEasy" />

    <Button
        android:id="@+id/btnExpert"
        android:layout_width="0dp"
        android:layout_height="64dp"
        style="@style/btnopt4"
        app:layout_constraintTop_toBottomOf="@id/btnMedium"
        app:layout_constraintStart_toEndOf="@id/btnHard"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/expert" />

</androidx.constraintlayout.widget.ConstraintLayout>