<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warning"
            android:textSize="30sp"
            android:textColor="@color/red"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/warningText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warning_message"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/pressToContinueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/press_to_continue"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray" />
    </LinearLayout>

</RelativeLayout>
